improve mobile layout and fix redirect page layout bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,7 +109,7 @@ html {
     flex: 1;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 600px) {
     body {
         padding: 30px 15px 60px 15px;
         margin: 0;
@@ -122,6 +122,22 @@ html {
     }
     .version {
         margin-right: 0;
+    }
+}
+
+.mainMenu.channel-menu {
+    display: none;
+}
+
+@media (max-width: 435px) {
+    #room-list {
+        display: none;
+    }
+    #room-list.show {
+        display: block;
+    }
+    .mainMenu.channel-menu {
+        display: flex;
     }
 }
 
